--- a/index.html
+++ b/index.html
@@ -153,7 +153,14 @@
       <section aria-labelledby="featured-projects-heading">
         <h3 id="featured-projects-heading">Featured Projects</h3>
         <article class="card" aria-labelledby="project1-title">
-          <h4 id="project1-title">Voice-Driven Menu Systems for Robots - Low Floor, High Ceiling Learning in STEM</h4>
+          <h4 id="project1-title">Casio calculator serial protocol hack - $5 timed interval data logging now possible</h4>
+          <p class="meta">Updated for Casio FX-9750, FX-9860 and FX-CG50 data logging &middot; 2025</p>
+          <blockquote><span lang="en">“Ultra low cost home-made Casio calculator data logger for home and school.”</span></blockquote>
+          <p>Project-based learning to scaffold science, maths, and data literacy.</p>
+	  <p><a href="projects/casio-calculator-data-logger-hack.html" aria-label="Go to Casio calculator data logger page.">Go to Casio calculator data logger page.</a></p>
+        </article>
+        <article class="card" aria-labelledby="project2-title">
+          <h4 id="project2-title">Voice-Driven Menu Systems for Robots - Low Floor, High Ceiling Learning in STEM</h4>
           <p class="meta">Prototype &middot; 2025</p>
           <p>An interactive voice controlled robot and mobile science lab. A working B9 robot from the TV show "Lost in Space" to engage learners in maths and science. Students can make their own new friend!</p>
           <ul>
@@ -163,12 +170,12 @@
           </ul>
           <p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Go to the B9 Robot project page.">Go to the B9 Robot project page.</a></p>
         </article>
-        <article class="card" aria-labelledby="project2-title">
-          <h4 id="project2-title">Digital Multimeters for Science and Maths - Low Cost Citizen Science and Authentic Maths Learning</h4>
+        <article class="card" aria-labelledby="project3-title">
+          <h4 id="project3-title">Digital Multimeters for Science and Maths - Low Cost Citizen Science and Authentic Maths Learning</h4>
           <p class="meta">Updated for B9 robot and RIGEL &middot; 2025</p>
           <blockquote><span lang="en">“Small, reliable tools can shift student focus from book rote learning to hands-on inquiry.”</span></blockquote>
           <p>Project-based learning to scaffold science, maths, and data literacy.</p>
-	  <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Go to teaching resources page.">Go to teaching resources page.</a></p>
+	  <p><a href="projects/digital-multimeters-as-data-loggers.html" aria-label="Go to teaching resources page.">Go to teaching resources page.</a></p>
         </article>
       </section>
       <section aria-labelledby="sample-publications-heading">
