--- a/projects/digital-multimeters-as-data-loggers.html
+++ b/projects/digital-multimeters-as-data-loggers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Digital Multimeters as Datalogger Substitutes</title>
+  <title>Michael Fenton — Digital Multimeters as Data Logger Substitutes</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -99,7 +99,7 @@
 	    <li>These robust digital multimeters (DMM) can be used in a wide variety of subjects, such as Physical Education, Horticulture, Calculus and Statistics.</li>
             <li>Michael invented the "Build it, Test it, Use it" pedagogy for inquiry-based learning and discovery at home as well as school.</li>
 	    <li>He promoted affordable, inquiry-driven cross-curricula learning sharing his research at conferences, through publications, and on his Nexus Research Group website.</li>
-            <li>Michael's DMM digital multimeter datalogger technology is still being shared by other educators, such as the Sir Angus Tait Science Teaching Enrichment Programme, known as “SAT STEP”. Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
+            <li>Michael's DMM digital multimeter data logger technology is still being shared by other educators, such as the Sir Angus Tait Science Teaching Enrichment Programme, known as “SAT STEP”. Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
           </ul>
 	</section>
 	<h3 id="build-it">Build it</h3>
