--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making,  Maker Science, Digital Multimeters as Low Cost Dataloggers, Game Design to Teach STEM, gaem design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link" />
+  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making,  Maker Science, Digital Multimeters as Low Cost Data Loggers, Game Design to Teach STEM, gaem design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link" />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -88,12 +88,12 @@
       <h2>Projects and Education Research</h2>
       <p>Current lines of inquiry and active studies.</p>
         <article class="card" aria-labelledby="project1-title">
-          <h4 id="project1-title">Digital Multimeters as Low Cost Dataloggers: Citizen science and authentic cross-curricula learning</h4>
-          <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
+          <h4 id="project1-title">Digital Multimeters as Low Cost Data Loggers: Citizen science and authentic cross-curricula learning</h4>
+          <p><a href="projects/digital-multimeters-as-data-loggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
-          <h4 id="project2-title">Next-Generation Casio Calculator Datalogger for $10. Providing equity and accessibility in STEM education</h4>
-          <p><a href="projects/casio-calculator-sensor-upgrade.html" aria-label="Link to Casio and Picaxe project details">Link to Casio FX-9750 graphic calculator hack for a $10 data logger details</a></p>
+          <h4 id="project2-title">Next-Generation Casio Calculator Data Logger for $10. Providing equity and accessibility in STEM education</h4>
+          <p><a href="projects/casio-calculator-data-logger-hack.html" aria-label="Link to Casio and Picaxe project details">Link to Casio FX-9750 graphic calculator hack for a $10 data logger details</a></p>
         </article>
         <article class="card" aria-labelledby="project3-title">
           <h4 id="project3-title">Art Meets Science with Digital Technology: The Real-world Interactive Games and Electronics Link</h4>
