--- a/projects/casio-calculator-data-logger-hack.html
+++ b/projects/casio-calculator-data-logger-hack.html
@@ -81,16 +81,16 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Next-Generation Calculator Datalogger $10 upgrade</h2>
+        <h2 id="intro-heading">Next-Generation Calculator Data Logger $10 upgrade</h2>
 	<h3>Providing equity and accessibility in STEM education</h3>
 	<p>Michael Fenton has improved his original Picaxe Casio calculator data logger developed in the mid-2000s. Michael discovered a Casio serial protocol hack to permit time interval data logging using Casio FX-9750 calculators connected to Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
 <p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
 
-<p>This represents a paradigm shift from "dataloggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
+<p>This represents a paradigm shift from "data loggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
 
-<p>This groundbreaking update to classroom-proven datalogger technology transforms standard FX-9750 and FX-9860 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. This enhanced system addresses critical equity gaps in STEM education by making authentic experimental learning accessible to junior year levels and low socio-economic communities traditionally excluded from using "expensive" laboratory equipment.</p>
-<img src="../assets/img/michael-fenton-picaxe-casio.jpg" alt="'Portable datalogger units - wireless remote control mode" />
+<p>This groundbreaking update to classroom-proven data logger technology transforms standard FX-9750 and FX-9860 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. This enhanced system addresses critical equity gaps in STEM education by making authentic experimental learning accessible to junior year levels and low socio-economic communities traditionally excluded from using "expensive" laboratory equipment.</p>
+<img src="../assets/img/michael-fenton-picaxe-casio.jpg" alt="'Portable data logger units - wireless remote control mode" />
 <blockquote><span lang="en">"<strong>'Wireless remote control'</strong> - older Casio calculators with black box sensor units connected. Portable and battery powered.</span></blockquote>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
@@ -139,8 +139,8 @@
 	<p>Experience shows students were familiar with many standard calculator functions, but learners had no experience of Casio BASIC to code their own programmes. Teacher-guided simple activities pre-tested and guaranteed to work will build learner confidence and wonderings. The new Casio BASIC code supplied to learners permits universal connection to microcontrollers and simple menu selections to begin data collection. Temperature and light intensity make good first experiences. Michael would use an introductory worksheet with three stages;
 </p>
           <ul>
-            <li><strong>Build your datalogger</strong> - a ‘howto’ description for connecting Casio FX-9750 to the microcontroller sensor unit. A "universal" Casio BASIC program is provided for learners to install on their own Casio calculator.</li>
-            <li><strong>Test your datalogger</strong> - an activity already tested by the teacher to demonstrate the datalooger has been assembled correctly and the Casio program is performing as expected. With senior classes in maths or science, it is expected some sensors would need calibrating, a useful additional skill. You could leave this for a later class activity.</li>
+            <li><strong>Build your data logger</strong> - a ‘howto’ description for connecting Casio FX-9750 to the microcontroller sensor unit. A "universal" Casio BASIC program is provided for learners to install on their own Casio calculator.</li>
+            <li><strong>Test your data logger</strong> - an activity already tested by the teacher to demonstrate the datalooger has been assembled correctly and the Casio program is performing as expected. With senior classes in maths or science, it is expected some sensors would need calibrating, a useful additional skill. You could leave this for a later class activity.</li>
 	    <li><strong>Use your data logger</strong> - introductory investigations should be teacher-led so technical problems or misunderstandings are identfied and addressed. Later, once learners are confident users, learners can design and carry out their own investigations. The Casio BASIC program can be modfied and learners are encouraged to do so. Different sensors can be used or new ones designed and tested. Again, learners and teachers are encouraged to do so.</li>
           </ul>
 <p></p>
@@ -152,7 +152,7 @@
 <p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
 <img src="../assets/img/michael-fenton-casio-receive-pause.png" alt="Comparison of Michael's hack." />
 <p> MORE DETAILS WILL FOLLOW - including source code, lesson ideas, and learning materials. If you would like to see Michael's original work with teaching ideas and examples, click the button below.</p>
-	<p><a href="casio-calculator-picaxe-datalogger.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
+	<p><a href="casio-calculator-picaxe-data-logger.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. He is working on more material for this page. For now you can see a demonstration of the "Universal" Casio BASIC program that communicates with Picaxe or ESP8266 or ESP32 sensor units.</p>
 <div class="video-container">
@@ -174,7 +174,7 @@
   </a>
   <p>This work may be copied, shared, remixed, and adapted for non-commercial purposes under the terms of the license.</p>
   <p>Requirements: give appropriate credit, provide a link to the license, and indicate if changes were made. Derivatives must be licensed under identical terms.</p>
-  <p><small>Attribution example: <strong>Casio Calculator Datalogger Limitation Removed: Timed sensor sampling using a novel RECEIVE() algorithm — Michael Fenton</strong> — CC BY-NC-SA 4.0 — https://creativecommons.org/licenses/by-nc-sa/4.0/</small></p>
+  <p><small>Attribution example: <strong>Casio Calculator Data Logger Limitation Removed: Timed sensor sampling using a novel RECEIVE() algorithm — Michael Fenton</strong> — CC BY-NC-SA 4.0 — https://creativecommons.org/licenses/by-nc-sa/4.0/</small></p>
   </footer>
 
   <script src="../assets/js/main.js"></script>
