--- a/talks.html
+++ b/talks.html
@@ -91,7 +91,7 @@
         <li id="feature-interview-and-video"><strong>Michael and Kimberley Fenton Get Kids into Coding and Digital Technology.</strong> — News feature and  video<br /><span class="meta"> <a href="https://www.stuff.co.nz/technology/102483973/robot-competition-replaces-steam-car-challenge-at-taranaki-science-fair" target="_blank" aria-label="Link to article and video">Link to article and video</a></span></li></ul><ul>
         <li id="talk-reclaiming-science"><strong>From Galileo to LIGO: Reclaiming the Maker Space for Science.</strong> — SciCon 2016<br /><span class="meta">Keynote  &middot; <a href="files/michael-fenton-keynote.pdf"  target="_blank" aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></li></ul><ul>
         <li id="feature-interview"><strong>Shining a Light on the Future:</strong> Scientist Michael Fenton interview<br /><span class="meta"> <a href="assets/img/michael-fenton-daily-news.jpg" target="_blank" aria-label="Link to article">Link to article</a></span></li></ul><ul>
-        <li id="talk-enlightenment-and-education"><strong>Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference<br /><span class="meta">Keynote </span></li>
+        <li id="talk-enlightenment-and-education"><strong>Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference keynote adress.</li>
       </ul>
 	<h2>Science communication</h2>
 	<ul>
