--- a/projects/casio-calculator-data-logger-hack.html
+++ b/projects/casio-calculator-data-logger-hack.html
@@ -133,7 +133,7 @@
 <p> </p>
 <blockquote><span lang="en">"<strong>'Build it'</strong> - receiving sensor data from a Wemos D1 mini ESP8266 sensor unit.</span></blockquote>
 <div style="display: flex; justify-content: center; padding: 20px;">
-  <img src="../assets/img/michael-fenton-casio-serial-pause-receive.svg" style="max-width: 900px; width: 100%; height: auto;" alt="Michael Fenton pause RECEIVE() Protocol">
+  <img src="../assets/img/michael-fenton-casio-calculator-receive-pause.png" style="max-width: 900px; width: 100%; height: auto;" alt="Michael Fenton pause RECEIVE() Protocol">
 </div>
 	<h3 id="test-it">Test it</h3>
 	<p>Experience shows students were familiar with many standard calculator functions, but learners had no experience of Casio BASIC to code their own programmes. Teacher-guided simple activities pre-tested and guaranteed to work will build learner confidence and wonderings. The new Casio BASIC code supplied to learners permits universal connection to microcontrollers and simple menu selections to begin data collection. Temperature and light intensity make good first experiences. Michael would use an introductory worksheet with three stages;
