--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument. You can downlaod his Apple II Transylvania remake, complete with original soundtrack." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -24,7 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
-    "keywords": "Game design, STEM teaching, future focused, art and science, cross-curricla learning, creativity in STEM",
+    "keywords": "Game design, Apple II Transylvania remake, STEM teaching, future focused, art and science, cross-curricla learning, creativity in STEM",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -120,7 +120,7 @@
 <br>
 <img src="../assets/img/michael-fenton-transylvania.jpg" alt="'Transylvania' Adventure game' Transylvania Apple II remake" />
 
-<blockquote><span lang="en">"<strong>'Adventure game example'</strong> By playing games learners anaylse what feature makes a game engaging. Art, sound, narrative, rewards and penalties!</span></blockquote>
+<blockquote><span lang="en">"<strong>'Adventure game example'</strong> By playing games learners anaylse what feature makes a game engaging. Art, sound, narrative, rewards and penalties!. You can download this <strong>Transylvania</strong> Apple II adventure game remake below!</span></blockquote>
 <br>
 <img src="../assets/img/michael-fenton-stingray-game.jpg" alt="'Gerry Anderson Stringray game' Side scroller game - Gerry Anderson Stringray" />
 
@@ -157,9 +157,18 @@
 <img src="../assets/img/michael-fenton-graph-explorer.jpg" alt="'Test It' activity - angle sensor" />
 
 <h3 id="conclusion">Conclusion</h3>
-<p>Game design software is a versatile educational tool that builds confidence and deepens subject knowledge by turning abstract concepts into playful, measurable interactions. Michael Fenton’s RIGEL work illustrates a scalable model for bringing authentic science, computing, and creative practice into classrooms using low-cost, student-centred technology.</p>
-
-	<h3 id="presentations">YouTube videos</h3>
+<p>Game design software is a versatile educational tool that builds confidence and deepens subject knowledge by turning abstract concepts into playful, measurable interactions.</p><p>Simple text-based games, like Transylvania, encourage responsible AI use as a tool for motivation and enrichment. Create original musical compositions, visualise fantasy worlds, tell rich stories!</p><p> Michael Fenton’s RIGEL work illustrates a scalable model for bringing authentic science, computing, and creative practice into classrooms using low-cost, student-centred technology.</p>
+<h3 id="downloads">Game downloads</h3>
+<p>An example of the creativity and art in STEM is here: A remake of the classic 1982 Apple II game Transylvania, at a time of 'digital founders' (often incorrectly labelled 'digital immigrants'!). Anyone remember this?</p>
+<img src="../assets/img/old-transylvania.jpg" alt="'Transylvania screenshot'; the original Apple II Transylvania, 1982" />
+<br>
+<p>Discover the magic and thrills in this 2025 remake with added features! Rich original graphics and sounds, original sound tracks, new tricks, traps and treasure to find!</p>
+	<blockquote><span lang="en"><strong>Download "Transylvania 2025"</strong>. COMING SOON - NOVEMBER 20. Original art, added sound effects, and original soundtrack! Search for you lost cousin, but beware the shadows!</span></blockquote>
+<img src="../assets/img/michael-fenton-transylvania.jpg" alt="'Michael Fenton's Transylvania screenshot'; Transylvania, 2025, for Windows." />
+<br>
+	<blockquote><span lang="en"><a href="../files/Transylvania-strange-games.mp3" target="_blank"><strong>Download "Transylvania - Strange Games"</strong> Original sound track by Michael Fenton [MP3]</a></span></blockquote>
+<br>
+	<h3 id="youtube">YouTube videos</h3>
 	<p>Michael has documented many of his projects in YouTube videos. Here the low cost game pad controller is used with Game Maker to create a 3D flight simulator. A new use for a discarded exercise bike!</p>
 <div class="video-container">
 <iframe 
