--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -166,6 +166,16 @@
 	<blockquote><span lang="en"><strong>Download "Transylvania 2025"</strong>. COMING SOON - NOVEMBER 20. Original art, added sound effects, and original soundtrack! Search for you lost cousin, but beware the shadows!</span></blockquote>
 <img src="../assets/img/michael-fenton-transylvania2.jpg" alt="'Michael Fenton's Transylvania screenshot'; Transylvania, 2025, for Windows." />
 <br>
+<p>This project is more than nostalgia. It’s an experiment in how AI can act as a creative partner when teaching Science or Technology. My example does more than breathe new life into simple text-based adventure games. It demonstrates human/AI partnership to:</p>
+          <ul>
+            <li>Compose an original soundtrack inspired by the game’s eerie atmosphere.</li>
+            <li>Generate artwork that reimagines the world of Transylvania.</li>
+	    <li>Expand knowledge of musical genres, art styles, and the history of computer gaming.
+</li>
+          </ul>
+<p>AI used as a partner is immensely motivating - filling skills gaps but with input and direction from the learner, who iterates for an ever improving result and product!</p> 
+<p>The backing track is sung in the style of my daughter Kimberley Fenton, a very talented composer and singer.</p>
+<p>Return to Transylvania in 2025 - feel the vibe in the music today, and hear what expert teaching can produce!</p>
 	<blockquote><span lang="en"><a href="../files/Transylvania-strange-games.mp3" target="_blank"><strong>Download "Transylvania - Strange Games"</strong> Original sound track by Michael Fenton [MP3]</a></span></blockquote>
 <br>
 	<h3 id="youtube">YouTube videos</h3>
