--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -179,6 +179,15 @@
 	<blockquote><span lang="en"><a href="../files/Transylvania-strange-games.mp3" target="_blank"><strong>Download "Transylvania - Strange Games"</strong> Original sound track by Michael Fenton [MP3]</a></span></blockquote>
 <br>
 	<h3 id="youtube">YouTube videos</h3>
+	<p>Michael demonstrates using AI as a partner to give new life to the classic Apple II game Transylvania. Enjoy the original composition and lyrics with a preview of the reimagined world of Transylvania!</p>
+<div class="video-container">
+<iframe 
+        src="https://www.youtube.com/embed/f0vfs96Ope8"
+        title="Transylvania remake - main theme - Strange Games"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</div>
 	<p>Michael has documented many of his projects in YouTube videos. Here the low cost game pad controller is used with Game Maker to create a 3D flight simulator. A new use for a discarded exercise bike!</p>
 <div class="video-container">
 <iframe 
