--- a/projects/artificial-intelligence-in-education.html
+++ b/projects/artificial-intelligence-in-education.html
@@ -129,6 +129,25 @@
 
 <img src="../assets/img/digital-multimeter-angle-sensor.jpg" alt="Digital multimeter data logger assembly" width="400" />
 <blockquote><span lang="en">Year 10 mathematics: Building foundational knowledge with hands-on Data Detective sensor investigations.</span></blockquote>
+<br>
+	<h3 id="youtube">YouTube video</h3>
+<p>Michael demonstrates using AI as a partner to give new life to the classic Apple II game Transylvania.</p>
+<p>This project is more than nostalgia. It’s an experiment in how AI can act as a creative partner when teaching Science or Technology. This example does more than breathe new life into simple text-based adventure games.</p>
+<p>It demonstrates human/AI partnership to:</p>
+          <ul>
+            <li>Compose an original soundtrack inspired by the game’s eerie atmosphere.</li>
+            <li>Generate artwork that reimagines the world of Transylvania.</li>
+	    <li>Expand knowledge of musical genres, art styles, and the history of computer gaming.</li>
+	 </ul>
+<p> Enjoy the original composition and lyrics with a preview of the reimagined world of Transylvania!</p>
+<div class="video-container">
+<iframe 
+        src="https://www.youtube.com/embed/f0vfs96Ope8"
+        title="Transylvania remake - main theme - Strange Games"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</div>
 <p> </p>
 	<p><a href="../teaching.html" class="button" aria-label="See more about teaching by Michael Fenton">Back to Teaching</a></p>
     </main>
