--- a/projects/artificial-intelligence-in-education.html
+++ b/projects/artificial-intelligence-in-education.html
@@ -24,7 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
-    "keywords": "Instructional design, Artificial Education in Education, AI in teaching, AI in assessment, Brain-to-LLM, AI Assessment Scale (AIAS)",
+    "keywords": "Instructional design, Artificial Intelligence in Education, AI in teaching, AI in assessment, Brain-to-LLM, AI Assessment Scale (AIAS)",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
