--- a/teaching.html
+++ b/teaching.html
@@ -106,7 +106,10 @@
       </ul>
 	<h3>AI in Education</h3>
           <ul>
-            <li><a href="projects/artificial-intelligence-in-education.html" aria-label="Link to Michael's think piece.">Link to Michael's analysis and experience.</a></li>
+            <li><a href="projects/artificial-intelligence-has-learnt-to-lie.html" aria-label="Link to Michael's thought leadership.">Link to Michael's warning to educators that AI assistants can lie convinvingly.</a></li>
+          </ul>
+          <ul>
+            <li><a href="projects/artificial-intelligence-in-education.html" aria-label="Link to Michael's thought leadership.">Link to Michael's analysis and experience.</a></li>
           </ul>
 	<h3>Instructional Design and Moderation</h3>
           <ul>
