--- a/projects/casio-calculator-data-logger-hack.html
+++ b/projects/casio-calculator-data-logger-hack.html
@@ -151,7 +151,14 @@
 	<h3 id="use-it">Use it</h3>
 <p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
 <img src="../assets/img/michael-fenton-casio-receive-pause.png" alt="Comparison of Michael's hack." />
-<p> MORE DETAILS WILL FOLLOW - including source code, lesson ideas, and learning materials. If you would like to see Michael's original work with teaching ideas and examples, click the button below.</p>
+<br>
+<h3 id="downloads">'How-to' downloads and code</h3>
+	<blockquote><span lang="en"><strong>Downloads available December 2025 - check back soon!</strong> [ Casio FX-9750 code, Picaxe BASIC code, ESP8266 / ESP32 C++ code ]</span></blockquote>
+<img src="../assets/img/picaxe-code.jpg" alt="'Picaxe basic code example'; Picaxe BASIC code will be provided" />
+<br>
+	<blockquote><span lang="en"><strong>Downloads available December 2025 - check back soon!</strong> [ Wiring diagram, RECEIVE() and SEND() protocols, code explanations and experiment lab manual ]</span></blockquote>
+<img src="../assets/img/casio-calculator-picaxe-esp32-manual.jpg" alt="'Michael Fenton's experiment manual'; Casio calculator data logger manual." />
+<br>
 	<p><a href="casio-calculator-picaxe-data-logger.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. He is working on more material for this page. For now you can see a demonstration of the "Universal" Casio BASIC program that communicates with Picaxe or ESP8266 or ESP32 sensor units.</p>
